--- a/Frontend/src/pages/EventListPage.css
+++ b/Frontend/src/pages/EventListPage.css
@@ -1,25 +1,27 @@
 .event-header {
-  display: flex;
-  flex-wrap: wrap; 
-  width: 20em;
-  margin:1em;
+   display: inline; 
+  /* flex-wrap: wrap;  */
+  /*width: 20em;
+  margin:1em;*/
 }
 
 .event-heading {
-    text-align: center;
-  /* flex-basis: 80%; */
-  flex-basis: 45%;
+    /*text-align: center;*/
+   flex-basis: 80%; 
+  /*flex-basis: 45%;*/
 }
 
 .event-button{
-  /* flex-basis: 1%; */
-  flex-basis: 45%;
+    display: inline-block;
+    margin: 25px 0px 75px 0px;
+
+  /*flex-basis: 45%;*/
 }
 
 * {
-  text-align: center;
+  /*text-align: center;
   align-items: center;
-  justify-content: center;
+  justify-content: center;*/
 }
 
 h1 {
