--- a/Frontend/src/components/TrailList.css
+++ b/Frontend/src/components/TrailList.css
@@ -3,5 +3,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 80vh;
+  margin-bottom: 5em;
+  margin-top: 5em;
 }
