--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -5,7 +5,7 @@
 }
 
 .App {
-  text-align: center;
+  /* text-align: center; */
   background-color: #9ecca4;
   color: white;
   min-height: 100vh;
