--- a/Frontend/src/components/Comments.css
+++ b/Frontend/src/components/Comments.css
@@ -1,3 +1,10 @@
 .ui.comments {
   margin: auto !important;
+  margin-top: 100px !important;
+  margin-bottom: 100px !important;
+}
+
+.review-block {
+  justify-content: space-between;
+  display: flex;
 }
