--- a/Frontend/src/components/SearchBarComponent.css
+++ b/Frontend/src/components/SearchBarComponent.css
@@ -1,6 +1,9 @@
-/* .MuiPaper-root {
+.MuiPaper-root {
+  max-width: 40em !important;
+  border-radius: 0.6em !important;
   box-shadow: 0 13px 27px -5px hsla(240, 30.1%, 28%, 0.25),
     0 8px 16px -8px hsla(0, 0%, 0%, 0.3),
     0 -6px 16px -6px hsla(0, 0%, 0%, 0.03) i !important;
   transition: all ease 200ms !important;
-} */
+  margin: auto;
+}
