--- a/Frontend/src/components/ImageSection.css
+++ b/Frontend/src/components/ImageSection.css
@@ -7,8 +7,7 @@ video {
 }
 
 .image-container {
-  background: url("https://cdn1.i-scmp.com/sites/default/files/images/methode/2017/05/02/35cc35e2-2a41-11e7-acff-d77f13c4971d_image_hires_150136.JPG")
-    center center/cover no-repeat;
+  background: center center/cover no-repeat;
   height: 70vh;
   width: 100%;
   text-align: left;
