Style trail page

--- a/Frontend/src/pages/TrailPage.css
+++ b/Frontend/src/pages/TrailPage.css
@@ -1,3 +1,8 @@
+.trail-main-section {
+  display: flex;
+  margin: 100px;
+}
+
 .trail-map {
   margin: auto;
   height: 700px;
@@ -6,4 +11,9 @@
 
 .leaflet-container {
   height: 100% !important;
+}
+
+.comment-section {
+  flex-basis: 40%;
+  margin: 35px;
 }
