--- a/Frontend/src/components/Comments.css
+++ b/Frontend/src/components/Comments.css
@@ -1,10 +1,42 @@
+/* Comment Section */
+
 .ui.comments {
-  margin: auto !important;
-  margin-top: 100px !important;
-  margin-bottom: 100px !important;
+  margin: 0 !important;
 }
 
 .review-block {
   justify-content: space-between;
   display: flex;
+  font-size: 14px;
+  margin-bottom: 15px;
+}
+
+/* Comment Form */
+
+.ui.form .fields {
+  display: flex;
+  flex-direction: column !important;
+}
+
+.ui.form input[type="checkbox"],
+.ui.form textarea {
+  vertical-align: top;
+  height: 130px;
+}
+
+.ui.form .field:last-child,
+.ui.form .fields:last-child .field {
+  margin-top: 10px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+/* Comment Buttons */
+
+.comment-buttons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+  margin-right: 4px;
+  margin-left: 6px;
 }
