--- a/Frontend/src/components/HeroSection.css
+++ b/Frontend/src/components/HeroSection.css
@@ -9,7 +9,7 @@ video {
 .hero-container {
   background: url("https://cdn1.i-scmp.com/sites/default/files/images/methode/2017/05/02/35cc35e2-2a41-11e7-acff-d77f13c4971d_image_hires_150136.JPG")
     center center/cover no-repeat;
-  height: 100vh;
+  height: 94vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -49,6 +49,7 @@ video {
   .hero-container > h1 {
     font-size: 70px;
     margin-top: -150px;
+    padding: 0 30px;
   }
 }
 
@@ -56,10 +57,12 @@ video {
   .hero-container > h1 {
     font-size: 50px;
     margin-top: -100px;
+    padding: 0 30px;
   }
 
   .hero-container > p {
     font-size: 30px;
+    padding: 0 30px;
   }
 
   .btn-mobile {
