--- a/Frontend/src/components/NavBar.css
+++ b/Frontend/src/components/NavBar.css
@@ -89,6 +89,10 @@
 }
 
 @media screen and (max-width: 960px) {
+  .navbar {
+    height: 60px;
+  }
+
   .NavbarItems {
     position: relative;
   }
@@ -99,7 +103,7 @@
     width: 100%;
     height: 90vh;
     position: absolute;
-    top: 80px;
+    top: 60px;
     left: -100%;
     opacity: 1;
     transition: all 0.5s ease;
@@ -122,8 +126,9 @@
 
   .navbar-logo {
     position: absolute;
-    top: 0;
-    left: 0;
+    font-size: 1.5rem;
+    top: 10px;
+    left: -30px;
     transform: translate(25%, 50%);
   }
 
@@ -157,8 +162,9 @@
     transition: all 0.3s ease-out;
   }
 
-  .nav-links-mobile:hover {
-    background: #ccffbd;
+  .nav-links:hover {
+    color: #ccffbd;
+    border-bottom: 0px solid #fff;
     /* color: #9ecca4; */
     transition: 250ms;
   }
