Touch up event pane bar style
Co-Authored-By: briansodenkin <66714154+briansodenkin@users.noreply.github.com>

--- a/Frontend/src/pages/EventPage.css
+++ b/Frontend/src/pages/EventPage.css
@@ -5,6 +5,7 @@
 .sidenav---sidenav---_2tBP {
   top: 80px !important;
   background: #1f441e !important;
+  height: 1000px;
 }
 
 .sidenav---sidenav---_2tBP.sidenav---expanded---1KdUL {
