Revert style changes in material ui buttons
Co-Authored-By: briansodenkin <66714154+briansodenkin@users.noreply.github.com>
Co-Authored-By: Vincent Wong <vincentwwy168@gmail.com>

--- a/Frontend/src/pages/NewTrailPage.css
+++ b/Frontend/src/pages/NewTrailPage.css
@@ -44,8 +44,8 @@
 }
 
 .MuiButton-root {
-  margin-bottom: 21px !important;
-  margin-right: 150px !important;
+  /* margin-bottom: 21px !important;
+  margin-right: 150px !important; */
 }
 
 .file-name .MuiBox-root {
