Add create event dialog in trail page
Co-Authored-By: briansodenkin <66714154+briansodenkin@users.noreply.github.com>
Co-Authored-By: Vincent Wong <vincentwwy168@gmail.com>

--- a/Frontend/src/pages/TrailPage.css
+++ b/Frontend/src/pages/TrailPage.css
@@ -3,6 +3,10 @@
   margin: 100px;
 }
 
+/* .MuiFormLabel-root.Mui-focused {
+  color: greenyellow !important;
+} */
+
 .trail-map {
   margin: auto;
   height: 700px;
