--- a/Frontend/src/pages/EventPage.css
+++ b/Frontend/src/pages/EventPage.css
@@ -9,7 +9,7 @@
 
 .sidenav---sidenav---_2tBP {
   top: 80px !important;
-  background: #1f441e !important;
+  background: #9ecca4 !important;
   height: 1000px;
 }
 
