--- a/Frontend/src/pages/EventListPage.css
+++ b/Frontend/src/pages/EventListPage.css
@@ -1,9 +1,19 @@
 .event-header {
-  display: flex;
-  justify-content: space-between;
-  /* flex-wrap: wrap; */
   width: 40em;
   margin: auto;
   margin-bottom: 3em;
   margin-top: 3em;
+}
+
+.grid-container > span > ul {
+  margin: auto;
+}
+
+@media screen and (max-width: 1200px) {
+  .event-header {
+    width: 20em;
+    margin: auto;
+    margin-bottom: 2em;
+    margin-top: 2em;
+  }
 }
