--- a/Frontend/src/components/HeroSection.css
+++ b/Frontend/src/components/HeroSection.css
@@ -7,7 +7,8 @@ video {
 }
 
 .hero-container {
-  background: url("https://cdn1.i-scmp.com/sites/default/files/images/methode/2017/05/02/35cc35e2-2a41-11e7-acff-d77f13c4971d_image_hires_150136.JPG")
+  background: url("https://www.pngfind.com/pngs/b/174-1746925_collection-of-free-landscape-vector-mountain-range-mountain.png")
+    /* url("https://cdn1.i-scmp.com/sites/default/files/images/methode/2017/05/02/35cc35e2-2a41-11e7-acff-d77f13c4971d_image_hires_150136.JPG") */
     center center/cover no-repeat;
   height: 94vh;
   width: 100%;
@@ -15,17 +16,27 @@ video {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+  /* box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2); */
   object-fit: contain;
 }
 
-.hero-container > h1 {
+.hero-banner {
+  height: 61vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+}
+
+.hero-banner > h1 {
+  /* color: black; */
   color: #fff;
   font-size: 100px;
   margin-top: -100px;
 }
 
-.hero-container > p {
+.hero-banner > p {
   margin-top: 8px;
   color: #fff;
   font-size: 32px;
@@ -46,7 +57,7 @@ video {
 }
 
 @media screen and (max-width: 960px) {
-  .hero-container > h1 {
+  .hero-banner > h1 {
     font-size: 70px;
     margin-top: -150px;
     padding: 0 30px;
@@ -54,13 +65,13 @@ video {
 }
 
 @media screen and (max-width: 768px) {
-  .hero-container > h1 {
+  .hero-banner > h1 {
     font-size: 50px;
     margin-top: -100px;
     padding: 0 30px;
   }
 
-  .hero-container > p {
+  .hero-banner > p {
     font-size: 30px;
     padding: 0 30px;
   }
