--- a/Frontend/src/components/ImageSection.css
+++ b/Frontend/src/components/ImageSection.css
@@ -75,6 +75,10 @@ video {
 }
 
 @media screen and (max-width: 960px) {
+  .hero-banner {
+    height: 84vh;
+  }
+
   .image-container > h1 {
     font-size: 70px;
     margin-top: -150px;
