--- a/Frontend/src/pages/TrailListPage.css
+++ b/Frontend/src/pages/TrailListPage.css
@@ -8,3 +8,34 @@
   margin-bottom: 3em;
   margin-top: 3em;
 }
+
+.trail-header > .MuiPaper-root {
+  width: 520px;
+  transform: scale(1.2);
+  margin-left: 52px;
+}
+
+.trail-button > a > .button {
+  margin-right: 29px;
+  transform: scale(1.5, 1.5);
+  /* background: white; */
+}
+
+@media screen and (max-width: 960px) {
+  .trail-header {
+    width: 20em;
+  }
+
+  .trail-header > .MuiPaper-root {
+    width: 14em;
+    margin: 0;
+    transform: scale(1, 1);
+  }
+
+  .trail-button > a > .button {
+    width: 6em;
+    margin: 0;
+    transform: scale(0.9, 0.9);
+    /* background: white; */
+  }
+}
